kube-manifest/02-Deployment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-node-app
  template:
    metadata:
      labels:
        app: sample-node-app
    spec:
      containers:
      - name: app
        image: 157112/sample-node-app:v2
        ports:
        - containerPort: 3000

      - name: nginx-sidecar
        image: nginx:stable-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf

      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  labels:
    app: sample-node-app
spec:
  selector:
    app: sample-node-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
